Updated design, fixed bugs

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangePasswordActivity">
+    tools:context=".Activity.ChangePasswordActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarChangePassword"
@@ -76,6 +76,7 @@
             android:layout_height="wrap_content"
             android:text="Отмена"
             android:onClick="onClickChangePasswordCancel"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/buttonPasswordChangeConfirm"
             app:layout_constraintTop_toTopOf="@+id/buttonPasswordChangeConfirm" />
