--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangeEmailActivity">
+    tools:context=".Activity.ChangeEmailActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarChangeEmail"
@@ -39,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Новая почта"
+            android:inputType="textEmailAddress"
             app:layout_constraintTop_toBottomOf="@id/textViewCurrentEmail"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +63,7 @@
             android:layout_height="wrap_content"
             android:text="Отмена"
             android:onClick="onClickChangeEmailCancel"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/buttonEmailChangeConfirm"
             app:layout_constraintTop_toTopOf="@+id/buttonEmailChangeConfirm" />
