--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -20,22 +20,22 @@
 
     <Button
         android:id="@+id/buttonDialogAgree"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@color/green"
         android:text="Выйти"
+        android:backgroundTint="@color/red"
         app:layout_constraintEnd_toStartOf="@id/buttonDialogCancel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDialogLogout" />
 
     <Button
         android:id="@+id/buttonDialogCancel"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@color/red"
         android:text="Отмена"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/buttonDialogAgree"
         app:layout_constraintTop_toBottomOf="@id/textViewDialogLogout" />
